# email_agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_CODE_INTEGRATION.md  GETTING_STARTED.md  GITHUB_SETUP.md  INSTALL.md  INSTALLATION.md  README.md  TESTING.md  email_history_config.json.example  plan.md  priority_scoring_design.md  pyproject.toml  requirements.txt  sender_management_design.md  spec.md  tasks.md
.claude/commands/: classify.md  email-analyze.md  email-auto.md  email-draft.md  email-send.md  email.md
.claude/skills/: classify-emails.md  prioritize-email.md
.github/workflows/: check-deploy.yml
docs/: HOW_TO_TEST.md  QUICK_START.md  README_CLAUDE_CODE.md  SETUP_CREDENTIALS.md  TEST_CHECKLIST.md
email_classifier/: __init__.py  classifier.py  claude_code_classifier.py  gmail_client.py  main.py  main_claude_code.py  main_sheets.py  main_simple.py  sheets_client.py  style_analyzer.py
scripts/: check_hardcoding.sh  daily_email_analyze.sh
