[project]
name = "simple-email-classifier"
version = "0.5.0"
description = "Gmail email classifier with Claude Code + 3D priority scoring + sender management + Gmail labels (no API costs!)"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
]

[project.scripts]
email-classify = "email_classifier.main_claude_code:main"
email-classify-sheets = "email_classifier.main_sheets:main"
email-classify-legacy = "email_classifier.main:main"
email-classify-simple = "email_classifier.main_simple:main_simple"
