[project]
name = "email-agent"
version = "0.6.3"
description = "Gmail email classifier with Claude Code slash commands - auto-draft, spreadsheet dashboard (no API costs!)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_classifier"]

[tool.uv]
dev-dependencies = []
